--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,5 +13,5 @@ jobs:
           
       - name: Run PHPStan
         run: |
-          docker run -v $PWD:/app --rm custom-phpstan analyze
-
+          docker run -v $PWD:/app --rm custom-phpstan --entrypoint /bin/bash -c php -v
+          docker run -v $PWD:/app --rm custom-phpstan analyze --debug
